# plasma-browser-integration-glib

./: README.md  meson.build  org.kde.plasma.chrome_integration.json.in  org.kde.plasma.firefox_integration.json.in  plasma-browser-integration-glib.spec
ebuild/www-plugins/plasma-browser-integration-glib/: Manifest  metadata.xml  plasma-browser-integration-glib-0.10.ebuild  plasma-browser-integration-glib-9999.ebuild
host/: abstractbrowserplugin.vala  config.vala.in  connection.vala  main.vala  meson.build  mpris.vala  pluginmanager.vala  settings.vala
